# chimera

./: .env.example  .gitignore  README.md  RESEARCH_NEWS_DRIVEN_TRADING_AGENT.md  pyproject.toml
chimera/: __init__.py  config.py  config.yaml  main.py
chimera-warroom/: package-lock.json  package.json
chimera-warroom/src/app/: globals.css  layout.tsx  page.tsx
chimera-warroom/src/components/fusion/: FusionPanel.tsx
chimera-warroom/src/components/header/: Header.tsx
chimera-warroom/src/components/hydra/: HydraPanel.tsx
chimera-warroom/src/components/oracle/: OraclePanel.tsx
chimera-warroom/src/components/pnl/: PnLPanel.tsx
chimera-warroom/src/components/ripple/: RippleGraph.tsx
chimera-warroom/src/components/waterfall/: WaterfallPanel.tsx
chimera-warroom/src/lib/: colors.ts  scenario.ts  store.ts  terminalLines.ts  types.ts
chimera/api/: __init__.py
chimera/core/: __init__.py  executor.py  fusion.py  kelly.py  risk.py
chimera/hydra/: __init__.py  agents.py  debate.py  judge.py  llm_backends.py  prompts.py
chimera/models/: __init__.py  events.py  forecasts.py  markets.py  trades.py
chimera/oracle/: __init__.py  cloudflare.py  clustering.py  dedup.py  gdelt.py  rss.py  signals.py  wikipedia.py
chimera/polymarket/: __init__.py  markets.py  trading.py  websocket.py
chimera/predator/: __init__.py  cascade.py  orderbook.py  vpin.py  whale.py
chimera/ripple/: __init__.py  extractor.py  graph.py  market_linker.py  propagation.py
chimera/utils/: backtest.py  logging.py
tests/: test_debate.py  test_fusion.py  test_vpin.py
